--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ class="img-responsive" src="img/profile.jpg" alt="">
                         <div class="caption">
                             <div class="caption-content">
                                <h4 style="color: black">Print</h4>
-                        <p class="text-muted">Published Work"</p>
+                        <p class="text-muted">Published Work</p>
                             </div>
                         </div>
                         <img src="img/print.png" class="img-responsive" alt="">
@@ -384,7 +384,7 @@ class="img-responsive" src="img/profile.jpg" alt="">
                             <hr class="star-primary">
                             <br>
                             <br>
-<a href="http://youtu.be/wjeOedLjUng"  target="_blank"><h3>Stony Brook Vs Colombia Men's Basketball</h3></a>
+<a href="http://youtu.be/wjeOedLjUng"  target="_blank"><h3>Stony Brook Vs Columbia Men's Basketball</h3></a>
                             
 
                                 <h5 class="item-intro text-muted">Audio Slideshow</h5><br>
